fix(dashboard-filters): 523 fixed clear section btn visibility

--- a/src/views/Dashboard/components/ClubFilterDropdown/clubFilterDropdown.module.scss
+++ b/src/views/Dashboard/components/ClubFilterDropdown/clubFilterDropdown.module.scss
@@ -9,8 +9,9 @@
   @extend %hideScrollbar;
 
   .header {
-    @include flex-container(space-between, center);
+    @include flex-container(flex-start, center);
     padding: 1rem;
+    height: 3.2rem;
   }
 
   .clearSelection {
@@ -22,6 +23,7 @@
 
   .closeIcon {
     cursor: pointer;
+    margin-left: auto;
   }
 
   .listContainer {
